--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             font-family: 'Roboto', sans-serif;
             background-color: #f9f9f9;
             color: #333;
+            text-align: center;
         }
         header {
             background-color: #ffffff;
@@ -34,11 +35,15 @@
             margin: 2rem auto;
             padding: 0 1rem;
         }
+        section {
+            margin: 2rem 0;
+        }
         .hero {
             text-align: center;
             padding: 4rem 1rem;
-            background-color: #007bff;
             color: white;
+            background: url('path-to-your-logo.png') no-repeat center center;
+            background-size: cover;
         }
         .hero h1 {
             font-size: 2.5rem;
@@ -57,6 +62,10 @@
         footer a {
             color: #007bff;
             text-decoration: none;
+        }
+        ul, ol {
+            display: inline-block;
+            text-align: left;
         }
     </style>
 </head>
