--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
+            background-color: #2f2f2f;
+            color: #ffffff;
             text-align: center;
         }
         header {
