--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background-color: #2f2f2f;
+            background: linear-gradient(to bottom, #2f2f2f, #1e1e1e);
             color: #ffffff;
             text-align: center;
         }
