--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             text-align: center;
         }
         header {
-            background-color: #ffffff;
+            background: linear-gradient(to bottom, #2f2f2f, #1e1e1e);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             padding: 1rem 2rem;
             display: flex;
@@ -23,7 +23,7 @@
         }
         header a {
             text-decoration: none;
-            color: #333;
+            color: #ffffff;
             font-weight: 700;
             margin: 0 1rem;
         }
