--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to bottom, #2f2f2f, #1e1e1e);
+            background: linear-gradient(to bottom, #1E3A8A, #6B21A8);
             color: #ffffff;
             text-align: center;
         }
         header {
-            background: linear-gradient(to bottom, #2f2f2f, #1e1e1e);
+            background: linear-gradient(to bottom, #1E3A8A, #6B21A8);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             padding: 1rem 2rem;
             display: flex;
@@ -28,7 +28,7 @@
             margin: 0 1rem;
         }
         header a:hover {
-            color: #007bff;
+            color: #93C5FD;
         }
         .container {
             max-width: 1200px;
@@ -60,7 +60,7 @@
             margin-top: 2rem;
         }
         footer a {
-            color: #007bff;
+            color: #93C5FD;
             text-decoration: none;
         }
         ul, ol {
