--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to bottom, #1E3A8A, #6B21A8);
+            background: linear-gradient(to bottom, #1E3A8A, #3A1E68, #6B21A8);
             color: #ffffff;
             text-align: center;
         }
         header {
-            background: linear-gradient(to bottom, #1E3A8A, #6B21A8);
+            background: linear-gradient(to bottom, #1E3A8A, #3A1E68);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             padding: 1rem 2rem;
             display: flex;
@@ -53,7 +53,7 @@
             font-size: 1.2rem;
         }
         footer {
-            background-color: #333;
+            background: linear-gradient(to top, #6B21A8, #3A1E68);
             color: white;
             text-align: center;
             padding: 1rem 0;
