--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
             text-align: center;
         }
         header {
-            background: linear-gradient(to bottom, #1E3A8A, #3A1E68);
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background: transparent;
             padding: 1rem 2rem;
             display: flex;
             justify-content: space-between;
