--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             font-size: 1.2rem;
         }
         footer {
-            background: linear-gradient(to top, #6B21A8, #3A1E68);
+            background: transparent;
             color: white;
             text-align: center;
             padding: 1rem 0;
