--- a/index.html
+++ b/index.html
@@ -5,68 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pawly - A Memecoin with Purpose</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to bottom, #1E3A8A, #3A1E68, #6B21A8);
-            color: #ffffff;
-            text-align: center;
-        }
-        header {
-            background: transparent;
-            padding: 1rem 2rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        header a {
-            text-decoration: none;
-            color: #ffffff;
-            font-weight: 700;
-            margin: 0 1rem;
-        }
-        header a:hover {
-            color: #93C5FD;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
-        section {
-            margin: 2rem 0;
-        }
-        .hero {
-            text-align: center;
-            padding: 4rem 1rem;
-            color: white;
-            background: url('path-to-your-logo.png') no-repeat center center;
-            background-size: cover;
-        }
-        .hero h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-        .hero p {
-            font-size: 1.2rem;
-        }
-        footer {
-            background: transparent;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-            margin-top: 2rem;
-        }
-        footer a {
-            color: #93C5FD;
-            text-decoration: none;
-        }
-        ul, ol {
-            display: inline-block;
-            text-align: left;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
