--- a/index.html
+++ b/index.html
@@ -4,66 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pawly - A Memecoin with Purpose</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script>
+        function switchLanguage(lang) {
+            const elements = document.querySelectorAll('[data-en], [data-pt]');
+            elements.forEach(el => {
+                el.innerHTML = el.getAttribute(`data-${lang}`);
+            });
+        }
+    </script>
 </head>
 <body>
     <header>
         <div><a href="#">Pawly</a></div>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#tokenomics">Tokenomics</a>
-            <a href="#how-to-buy">How to Buy</a>
-            <a href="#contact">Contact</a>
+            <button onclick="switchLanguage('en')">English</button>
+            <button onclick="switchLanguage('pt')">Português</button>
+            <a href="#home" data-en="Home" data-pt="Início">Home</a>
+            <a href="#about" data-en="About" data-pt="Sobre">About</a>
+            <a href="#tokenomics" data-en="Tokenomics" data-pt="Tokenomia">Tokenomics</a>
+            <a href="#how-to-buy" data-en="How to Buy" data-pt="Como Comprar">How to Buy</a>
+            <a href="#contact" data-en="Contact" data-pt="Contacto">Contact</a>
         </nav>
     </header>
 
     <div class="container">
         <section id="home" class="hero">
-            <h1>Welcome to Pawly</h1>
-            <p>The memecoin with a mission to help animals and make a difference.</p>
+            <h1 data-en="Welcome to Pawly" data-pt="Bem-vindo ao Pawly">Welcome to Pawly</h1>
+            <p data-en="The memecoin with a mission to help animals and make a difference."
+               data-pt="A memecoin com a missão de ajudar animais e fazer a diferença.">
+                The memecoin with a mission to help animals and make a difference.
+            </p>
         </section>
 
         <section id="about">
-            <h2>About Pawly</h2>
-            <p>Pawly is not just a memecoin; it’s a movement. Dedicated to supporting animal rescues and foundations like IRA, Pawly brings purpose to the blockchain.</p>
+            <h2 data-en="About Pawly" data-pt="Sobre o Pawly">About Pawly</h2>
+            <p data-en="Pawly is not just a memecoin; it’s a movement. Dedicated to supporting animal rescues and foundations like IRA, Pawly brings purpose to the blockchain."
+               data-pt="Pawly não é apenas uma memecoin; é um movimento. Dedicado a apoiar resgates de animais e fundações como a IRA, Pawly traz propósito ao blockchain.">
+                Pawly is not just a memecoin; it’s a movement. Dedicated to supporting animal rescues and foundations like IRA, Pawly brings purpose to the blockchain.
+            </p>
         </section>
 
         <section id="tokenomics">
-            <h2>Tokenomics</h2>
-            <p>Learn about the supply distribution and how Pawly contributes to its mission:</p>
+            <h2 data-en="Tokenomics" data-pt="Tokenomia">Tokenomics</h2>
+            <p data-en="Learn about the supply distribution and how Pawly contributes to its mission:"
+               data-pt="Saiba mais sobre a distribuição de tokens e como Pawly contribui para a sua missão:">
+                Learn about the supply distribution and how Pawly contributes to its mission:
+            </p>
             <ul>
-                <li>50% for liquidity</li>
-                <li>20% for donations</li>
-                <li>15% for marketing</li>
-                <li>15% for team and development</li>
+                <li data-en="50% for liquidity" data-pt="50% para liquidez">50% for liquidity</li>
+                <li data-en="20% for donations" data-pt="20% para doações">20% for donations</li>
+                <li data-en="15% for marketing" data-pt="15% para marketing">15% for marketing</li>
+                <li data-en="15% for team and development" data-pt="15% para a equipa e desenvolvimento">15% for team and development</li>
             </ul>
         </section>
 
         <section id="how-to-buy">
-            <h2>How to Buy</h2>
-            <p>Buying Pawly is easy! Follow these steps:</p>
+            <h2 data-en="How to Buy" data-pt="Como Comprar">How to Buy</h2>
+            <p data-en="Buying Pawly is easy! Follow these steps:"
+               data-pt="Comprar Pawly é fácil! Siga estes passos:">
+                Buying Pawly is easy! Follow these steps:
+            </p>
             <ol>
-                <li>Download a crypto wallet (e.g., MetaMask).</li>
-                <li>Add the Binance Smart Chain (BSC) network.</li>
-                <li>Swap BNB for Pawly on a decentralized exchange like PancakeSwap.</li>
+                <li data-en="Download a crypto wallet (e.g., MetaMask)." data-pt="Baixe uma carteira de criptomoedas (ex.: MetaMask).">Download a crypto wallet (e.g., MetaMask).</li>
+                <li data-en="Add the Binance Smart Chain (BSC) network." data-pt="Adicione a rede Binance Smart Chain (BSC).">Add the Binance Smart Chain (BSC) network.</li>
+                <li data-en="Swap BNB for Pawly on a decentralized exchange like PancakeSwap."
+                    data-pt="Troque BNB por Pawly em uma exchange descentralizada como PancakeSwap.">
+                    Swap BNB for Pawly on a decentralized exchange like PancakeSwap.
+                </li>
             </ol>
         </section>
 
         <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Have questions? Reach out to us on our social channels or via email:</p>
+            <h2 data-en="Contact Us" data-pt="Contacte-nos">Contact Us</h2>
+            <p data-en="Have questions? Reach out to us on our social channels or via email:"
+               data-pt="Tem perguntas? Fale conosco através dos nossos canais sociais ou por email:">
+                Have questions? Reach out to us on our social channels or via email:
+            </p>
             <ul>
-                <li>Email: <a href="mailto:contact@pawly.com">contact@pawly.com</a></li>
-                <li>Telegram: <a href="https://t.me/pawlycommunity">@pawlycommunity</a></li>
-                <li>Twitter: <a href="https://twitter.com/pawlycoin">@pawlycoin</a></li>
+                <li data-en="Email: <a href='mailto:contact@pawly.com'>contact@pawly.com</a>"
+                    data-pt="Email: <a href='mailto:contact@pawly.com'>contact@pawly.com</a>">
+                    Email: <a href='mailto:contact@pawly.com'>contact@pawly.com</a>
+                </li>
+                <li data-en="Telegram: <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>"
+                    data-pt="Telegram: <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>">
+                    Telegram: <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>
+                </li>
+                <li data-en="Twitter: <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>"
+                    data-pt="Twitter: <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>">
+                    Twitter: <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>
+                </li>
             </ul>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 Pawly. All Rights Reserved. | <a href="#">Privacy Policy</a></p>
+        <p data-en="&copy; 2024 Pawly. All Rights Reserved." data-pt="&copy; 2024 Pawly. Todos os direitos reservados.">&copy; 2024 Pawly. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
