--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
                     <option value="pt">Português</option>
                 </select>
             </div>
-        </nav>
+            <div class="language-selector">
+    <select>
+        <option value="en">
+            English
+        </option>
+        <option value="pt">
+            Português
+        </option>
+    </select>
+</div>
+</nav>
     </header>
 
     <div class="container">
