--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                data-fr="La memecoin avec une mission d’aider les animaux et faire une différence.">
                 The memecoin with a mission to help animals and make a difference.
             </p>
-            <img src="path-to-your-logo.png" alt="Pawly Logo" class="hero-logo">
+            <img src="Pawly.png" alt="Pawly Logo" class="hero-logo">
         </section>
 
         <!-- Other Sections -->
