--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@
     </header>
 
     <div class="container">
-        <!-- Home Section -->
         <section id="home" class="hero">
-            <h1 data-en="Welcome to Pawly" data-pt="Bem-vindo ao Pawly" data-es="Bienvenido a Pawly" data-fr="Bienvenue à Pawly" class="hero-title">
-                Welcome to Pawly
-            </h1>
+            <h1 data-en="Welcome to Pawly" data-pt="Bem-vindo ao Pawly" data-es="Bienvenido a Pawly" data-fr="Bienvenue à Pawly">Welcome to Pawly</h1>
             <p data-en="The memecoin with a mission to help animals and make a difference."
                data-pt="A memecoin com a missão de ajudar animais e fazer a diferença."
                data-es="La memecoin con una misión para ayudar a los animales y marcar la diferencia."
@@ -50,7 +47,6 @@
             <img src="Pawly.png" alt="Pawly Logo" class="hero-logo">
         </section>
 
-        <!-- Other Sections -->
         <section id="about">
             <h2 data-en="About Pawly" data-pt="Sobre o Pawly" data-es="Acerca de Pawly" data-fr="À propos de Pawly">About Pawly</h2>
             <p data-en="Pawly is not just a memecoin; it’s a movement. Dedicated to supporting animal rescues and foundations like IRA, Pawly brings purpose to the blockchain."
@@ -60,7 +56,72 @@
                 Pawly is not just a memecoin; it’s a movement. Dedicated to supporting animal rescues and foundations like IRA, Pawly brings purpose to the blockchain.
             </p>
         </section>
-        <!-- Continue other sections as before -->
+
+        <section id="tokenomics">
+            <h2 data-en="Tokenomics" data-pt="Tokenomia" data-es="Tokenomía" data-fr="Tokenomique">Tokenomics</h2>
+            <p data-en="Learn about the supply distribution and how Pawly contributes to its mission:"
+               data-pt="Saiba mais sobre a distribuição de tokens e como Pawly contribui para a sua missão:"
+               data-es="Descubre la distribución de tokens y cómo Pawly contribuye a su misión:"
+               data-fr="Découvrez la répartition des tokens et comment Pawly contribue à sa mission :">
+                Learn about the supply distribution and how Pawly contributes to its mission:
+            </p>
+            <ul>
+                <li data-en="50% for liquidity" data-pt="50% para liquidez" data-es="50% para liquidez" data-fr="50% pour la liquidité">50% for liquidity</li>
+                <li data-en="20% for donations" data-pt="20% para doações" data-es="20% para donaciones" data-fr="20% pour les dons">20% for donations</li>
+                <li data-en="15% for marketing" data-pt="15% para marketing" data-es="15% para marketing" data-fr="15% pour le marketing">15% for marketing</li>
+                <li data-en="15% for team and development" data-pt="15% para a equipa e desenvolvimento" data-es="15% para el equipo y desarrollo" data-fr="15% pour l’équipe et le développement">15% for team and development</li>
+            </ul>
+        </section>
+
+        <section id="how-to-buy">
+            <h2 data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">How to Buy</h2>
+            <p data-en="Buying Pawly is easy! Follow these steps:"
+               data-pt="Comprar Pawly é fácil! Siga estes passos:"
+               data-es="Comprar Pawly es fácil. Sigue estos pasos:"
+               data-fr="Acheter Pawly est facile ! Suivez ces étapes :">
+                Buying Pawly is easy! Follow these steps:
+            </p>
+            <ol>
+                <li data-en="Download a crypto wallet (e.g., MetaMask)." data-pt="Baixe uma carteira de criptomoedas (ex.: MetaMask)." data-es="Descarga una billetera cripto (p. ej., MetaMask)." data-fr="Téléchargez un portefeuille crypto (par ex., MetaMask).">Download a crypto wallet (e.g., MetaMask).</li>
+                <li data-en="Add the Binance Smart Chain (BSC) network." data-pt="Adicione a rede Binance Smart Chain (BSC)." data-es="Agrega la red Binance Smart Chain (BSC)." data-fr="Ajoutez le réseau Binance Smart Chain (BSC).">Add the Binance Smart Chain (BSC) network.</li>
+                <li data-en="Swap BNB for Pawly on a decentralized exchange like PancakeSwap."
+                    data-pt="Troque BNB por Pawly em uma exchange descentralizada como PancakeSwap."
+                    data-es="Intercambia BNB por Pawly en un exchange descentralizado como PancakeSwap."
+                    data-fr="Échangez du BNB contre Pawly sur un exchange décentralisé comme PancakeSwap.">
+                    Swap BNB for Pawly on a decentralized exchange like PancakeSwap.
+                </li>
+            </ol>
+        </section>
+
+        <section id="contact">
+            <h2 data-en="Contact Us" data-pt="Contacte-nos" data-es="Contáctenos" data-fr="Contactez-nous">Contact Us</h2>
+            <p data-en="Have questions? Reach out to us on our social channels or via email:"
+               data-pt="Tem perguntas? Fale conosco através dos nossos canais sociais ou por email:"
+               data-es="¿Tienes preguntas? Contáctanos en nuestros canales sociales o por correo electrónico:"
+               data-fr="Vous avez des questions ? Contactez-nous sur nos réseaux sociaux ou par email :">
+                Have questions? Reach out to us on our social channels or via email:
+            </p>
+            <ul>
+                <li data-en="Email: <a href='mailto:contact@pawly.com'>contact@pawly.com</a>"
+                    data-pt="Email: <a href='mailto:contact@pawly.com'>contact@pawly.com</a>"
+                    data-es="Correo: <a href='mailto:contact@pawly.com'>contact@pawly.com</a>"
+                    data-fr="Email : <a href='mailto:contact@pawly.com'>contact@pawly.com</a>">
+                    Email: <a href='mailto:contact@pawly.com'>contact@pawly.com</a>
+                </li>
+                <li data-en="Telegram: <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>"
+                    data-pt="Telegram: <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>"
+                    data-es="Telegram: <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>"
+                    data-fr="Telegram : <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>">
+                    Telegram: <a href='https://t.me/pawlycommunity'>@pawlycommunity</a>
+                </li>
+                <li data-en="Twitter: <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>"
+                    data-pt="Twitter: <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>"
+                    data-es="Twitter: <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>"
+                    data-fr="Twitter : <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>">
+                    Twitter: <a href='https://twitter.com/pawlycoin'>@pawlycoin</a>
+                </li>
+            </ul>
+        </section>
     </div>
 
     <footer>
