--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
     </header>
 
     <div class="container">
+        <!-- Home Section -->
         <section id="home" class="hero">
-            <h1 data-en="Welcome to Pawly" data-pt="Bem-vindo ao Pawly" data-es="Bienvenido a Pawly" data-fr="Bienvenue à Pawly">Welcome to Pawly</h1>
+            <h1 data-en="Welcome to Pawly" data-pt="Bem-vindo ao Pawly" data-es="Bienvenido a Pawly" data-fr="Bienvenue à Pawly" class="hero-title">
+                Welcome to Pawly
+            </h1>
             <p data-en="The memecoin with a mission to help animals and make a difference."
                data-pt="A memecoin com a missão de ajudar animais e fazer a diferença."
                data-es="La memecoin con una misión para ayudar a los animales y marcar la diferencia."
-               data-fr="La memecoin avec une mission d’aider les animaux et faire une différence.">
+               data-fr="La memecoin avec une mission d’aider les animaux et faire une différence." class="hero-paragraph">
                 The memecoin with a mission to help animals and make a difference.
             </p>
             <img src="Pawly.png" alt="Pawly Logo" class="hero-logo">
         </section>
 
+        <!-- About Section -->
         <section id="about">
             <h2 data-en="About Pawly" data-pt="Sobre o Pawly" data-es="Acerca de Pawly" data-fr="À propos de Pawly">About Pawly</h2>
             <p data-en="Pawly is not just a memecoin; it’s a movement. Dedicated to supporting animal rescues and foundations like IRA, Pawly brings purpose to the blockchain."
@@ -57,6 +61,7 @@
             </p>
         </section>
 
+        <!-- Tokenomics Section -->
         <section id="tokenomics">
             <h2 data-en="Tokenomics" data-pt="Tokenomia" data-es="Tokenomía" data-fr="Tokenomique">Tokenomics</h2>
             <p data-en="Learn about the supply distribution and how Pawly contributes to its mission:"
@@ -73,6 +78,7 @@
             </ul>
         </section>
 
+        <!-- How to Buy Section -->
         <section id="how-to-buy">
             <h2 data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">How to Buy</h2>
             <p data-en="Buying Pawly is easy! Follow these steps:"
@@ -93,11 +99,12 @@
             </ol>
         </section>
 
+        <!-- Contact Section -->
         <section id="contact">
             <h2 data-en="Contact Us" data-pt="Contacte-nos" data-es="Contáctenos" data-fr="Contactez-nous">Contact Us</h2>
             <p data-en="Have questions? Reach out to us on our social channels or via email:"
                data-pt="Tem perguntas? Fale conosco através dos nossos canais sociais ou por email:"
-               data-es="¿Tienes preguntas? Contáctanos en nuestros canales sociales o por correo electrónico:"
+               data-es="¿Tienes preguntas? Contáctanos en nuestros canales sociales ou por correo electrónico:"
                data-fr="Vous avez des questions ? Contactez-nous sur nos réseaux sociaux ou par email :">
                 Have questions? Reach out to us on our social channels or via email:
             </p>
