--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@
 </head>
 <body>
     <header>
-        <div><a href="#">Pawly</a></div>
-        <nav>
+        <div class="logo-container">
+            <img src="path-to-logo.png" alt="Pawly Logo" class="header-logo">
+            <a href="#">Pawly</a>
+        </div>
+        <nav class="center-nav">
             <a href="#home" data-en="Home" data-pt="Início" data-es="Inicio" data-fr="Accueil">Home</a>
             <a href="#about" data-en="About" data-pt="Sobre" data-es="Acerca" data-fr="À propos">About</a>
             <a href="#tokenomics" data-en="Tokenomics" data-pt="Tokenomia" data-es="Tokenomía" data-fr="Tokenomique">Tokenomics</a>
             <a href="#how-to-buy" data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">How to Buy</a>
             <a href="#contact" data-en="Contact" data-pt="Contacto" data-es="Contacto" data-fr="Contact">Contact</a>
-            <div class="language-selector">
-                <select onchange="switchLanguage(this.value)">
-                    <option value="en">English</option>
-                    <option value="pt">Português</option>
-                    <option value="es">Español</option>
-                    <option value="fr">Français</option>
-                </select>
-            </div>
         </nav>
+        <div class="language-selector">
+            <select onchange="switchLanguage(this.value)">
+                <option value="en">English</option>
+                <option value="pt">Português</option>
+                <option value="es">Español</option>
+                <option value="fr">Français</option>
+            </select>
+        </div>
     </header>
 
     <div class="container">
@@ -47,7 +50,7 @@
                data-fr="La memecoin avec une mission d’aider les animaux et faire une différence." class="hero-paragraph">
                 The memecoin with a mission to help animals and make a difference.
             </p>
-            <img src="Pawly.png" alt="Pawly Logo" class="hero-logo">
+            <img src="path-to-your-logo.png" alt="Pawly Logo" class="hero-logo">
         </section>
 
         <!-- About Section -->
@@ -78,33 +81,12 @@
             </ul>
         </section>
 
-        <!-- How to Buy Section -->
-        <section id="how-to-buy">
-            <h2 data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">How to Buy</h2>
-            <p data-en="Buying Pawly is easy! Follow these steps:"
-               data-pt="Comprar Pawly é fácil! Siga estes passos:"
-               data-es="Comprar Pawly es fácil. Sigue estos pasos:"
-               data-fr="Acheter Pawly est facile ! Suivez ces étapes :">
-                Buying Pawly is easy! Follow these steps:
-            </p>
-            <ol>
-                <li data-en="Download a crypto wallet (e.g., MetaMask)." data-pt="Baixe uma carteira de criptomoedas (ex.: MetaMask)." data-es="Descarga una billetera cripto (p. ej., MetaMask)." data-fr="Téléchargez un portefeuille crypto (par ex., MetaMask).">Download a crypto wallet (e.g., MetaMask).</li>
-                <li data-en="Add the Binance Smart Chain (BSC) network." data-pt="Adicione a rede Binance Smart Chain (BSC)." data-es="Agrega la red Binance Smart Chain (BSC)." data-fr="Ajoutez le réseau Binance Smart Chain (BSC).">Add the Binance Smart Chain (BSC) network.</li>
-                <li data-en="Swap BNB for Pawly on a decentralized exchange like PancakeSwap."
-                    data-pt="Troque BNB por Pawly em uma exchange descentralizada como PancakeSwap."
-                    data-es="Intercambia BNB por Pawly en un exchange descentralizado como PancakeSwap."
-                    data-fr="Échangez du BNB contre Pawly sur un exchange décentralisé comme PancakeSwap.">
-                    Swap BNB for Pawly on a decentralized exchange like PancakeSwap.
-                </li>
-            </ol>
-        </section>
-
         <!-- Contact Section -->
         <section id="contact">
             <h2 data-en="Contact Us" data-pt="Contacte-nos" data-es="Contáctenos" data-fr="Contactez-nous">Contact Us</h2>
             <p data-en="Have questions? Reach out to us on our social channels or via email:"
                data-pt="Tem perguntas? Fale conosco através dos nossos canais sociais ou por email:"
-               data-es="¿Tienes preguntas? Contáctanos en nuestros canales sociales ou por correo electrónico:"
+               data-es="¿Tienes preguntas? Contáctanos en nuestros canales sociales o por correo electrónico:"
                data-fr="Vous avez des questions ? Contactez-nous sur nos réseaux sociaux ou par email :">
                 Have questions? Reach out to us on our social channels or via email:
             </p>
