--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="path-to-logo.png" alt="Pawly Logo" class="header-logo">
+            <img src="Pawly.png" alt="Pawly Logo" class="header-logo">
             <a href="#">Pawly</a>
         </div>
         <nav class="center-nav">
@@ -50,7 +50,7 @@
                data-fr="La memecoin avec une mission d’aider les animaux et faire une différence." class="hero-paragraph">
                 The memecoin with a mission to help animals and make a difference.
             </p>
-            <img src="path-to-your-logo.png" alt="Pawly Logo" class="hero-logo">
+            <img src="Pawly.png" alt="Pawly Logo" class="hero-logo">
         </section>
 
         <!-- About Section -->
