--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <div class="container">
         <!-- Home Section -->
-        <section id="home" class="hero">
-    <h1 data-en="Welcome to Pawly" data-pt="Bem-vindo ao Pawly" data-es="Bienvenido a Pawly" data-fr="Bienvenue à Pawly" class="hero-title">
-        Welcome to Pawly
+       <section id="home" class="hero">
+    <h1 data-en="PAWLY" data-pt="PAWLY" data-es="PAWLY" data-fr="PAWLY" class="hero-title interactive-title">
+        PAWLY
     </h1>
     <p data-en="The memecoin with a mission to help animals and make a difference."
        data-pt="A memecoin com a missão de ajudar animais e fazer a diferença."
