--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
         <!-- Home Section -->
        <section id="home" class="hero">
-    <h1 data-en="PAWLY" data-pt="PAWLY" data-es="PAWLY" data-fr="PAWLY" class="hero-title interactive-title">
+    <h1 data-en="PAWLY" data-pt="PAWLY" data-es="PAWLY" data-fr="PAWLY" class="hero-title" id="interactive-title">
         PAWLY
     </h1>
     <p data-en="The memecoin with a mission to help animals and make a difference."
