--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         </div>
     </header>
 
+     <!-- Contêiner para os biscoitos caindo -->
+    <div id="falling-cookies"></div>
+
     <div class="container">
         <!-- Home Section -->
        <section id="home" class="hero">
