--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="Pawlylogo.png" alt="Pawly Logo" class="header-logo">
-            <a href="#">Pawly</a>
-        </div>
+    <img src="Pawlylogo.png" alt="Pawly Logo" class="header-logo">
+    <a href="#" id="pawly-sound-trigger">Pawly</a>
+</div>
+
+<!-- Lista de sons -->
+<audio id="bark-sound-1" src="path-to-bark-sound1.mp3"></audio>
         <nav class="center-nav">
             <a href="#home" data-en="Home" data-pt="Início" data-es="Inicio" data-fr="Accueil">Home</a>
             <a href="#about" data-en="About" data-pt="Sobre" data-es="Acerca" data-fr="À propos">About</a>
