--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <!-- Lista de sons -->
-<audio id="bark-sound-1" src="path-to-bark-sound1.mp3"></audio>
+<audio id="bark-sound-1" src="Doggos.mp3"></audio>
         <nav class="center-nav">
             <a href="#home" data-en="Home" data-pt="Início" data-es="Inicio" data-fr="Accueil">Home</a>
             <a href="#about" data-en="About" data-pt="Sobre" data-es="Acerca" data-fr="À propos">About</a>
