--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
             </p>
         </section>
 
+        <div id="paw-background"></div>
+
         <!-- Tokenomics Section -->
         <section id="tokenomics">
             <h2 data-en="Tokenomics" data-pt="Tokenomia" data-es="Tokenomía" data-fr="Tokenomique">Tokenomics</h2>
