--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 </head>
 <body>
 
-    <div id="paw-background"></div>
-    
+    <div id="background-layer"></div>
+    <div id="foreground-layer"></div>
+
     <header>
         <div class="logo-container">
     <img src="Pawlylogo.png" alt="Pawly Logo" class="header-logo">
