--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </script>
 </head>
 <body>
-
     <header>
         <div class="logo-container">
             <img src="Pawlylogo.png" alt="Logo do Pawly, uma memecoin com propósito" class="header-logo">
@@ -51,7 +50,7 @@
                data-es="La memecoin con una misión para ayudar a los animales y marcar la diferencia."
                data-fr="La memecoin avec une mission d’aider les animaux et faire une différence."
                class="hero-paragraph">
-                The memecoin with a mission to help animals and make a difference.
+                A memecoin com a missão de ajudar animais e fazer a diferença.
             </p>
             <img src="Pawlylogo.png" alt="Logo do Pawly com design moderno e minimalista" class="hero-logo">
         </section>
@@ -62,7 +61,7 @@
            data-pt="&copy; 2024 Pawly. Todos os direitos reservados."
            data-es="&copy; 2024 Pawly. Todos los derechos reservados."
            data-fr="&copy; 2024 Pawly. Tous droits réservés.">
-           &copy; 2025 Pawly. All Rights Reserved.
+           &copy; 2024 Pawly. All Rights Reserved.
         </p>
     </footer>
 
