--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
 </head>
 <body>
     <script src="Pawly.js"></script>
-    <header>
-        <div class="logo-container">
-    <img src="Pawlylogo.png" alt="Pawly Logo" class="header-logo">
-    <a href="#" id="pawly-sound-trigger">Pawly</a>
-</div>
+   <header>
+    <div class="logo-container">
+        <img src="Pawlylogo.png" alt="Logo do Pawly, uma memecoin com propósito" class="header-logo">
+        <a href="#" id="pawly-sound-trigger">Pawly</a>
+    </div>
+    <audio id="bark-sound-1" src="Doggos.mp3" type="audio/mpeg"></audio>
+</header>
+
 
 <!-- Lista de sons -->
 <audio id="bark-sound-1" src="Doggos.mp3"></audio>
