--- a/index.html
+++ b/index.html
@@ -19,30 +19,29 @@
 <body>
     <script src="Pawly.js"></script>
     <header>
-        <div class="logo-container">
-            <img src="Pawlylogo.png" alt="Logo do Pawly, uma memecoin com propósito" class="header-logo">
-            <a href="#" id="pawly-sound-trigger">Pawly</a>
-        </div>
-        <audio id="bark-sound-1" src="Doggos.mp3" type="audio/mp3"></audio>
-        
-        <nav class="center-nav">
-            <a href="#home" data-en="Home" data-pt="Início" data-es="Inicio" data-fr="Accueil">Home</a>
-            <a href="#about" data-en="About" data-pt="Sobre" data-es="Acerca" data-fr="À propos">About</a>
-            <a href="#tokenomics" data-en="Tokenomics" data-pt="Tokenomia" data-es="Tokenomía" data-fr="Tokenomique">Tokenomics</a>
-            <a href="#how-to-buy" data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">How to Buy</a>
-            <a href="#contact" data-en="Contact" data-pt="Contacto" data-es="Contacto" data-fr="Contact">Contact</a>
-        </nav>
+    <div class="logo-container">
+        <img src="Pawlylogo.png" alt="Logo do Pawly, uma memecoin com propósito" class="header-logo">
+        <a href="#home" class="nav-link">Pawly</a> <!-- Atualize o estilo para combinar com os botões -->
+    </div>
 
-        <div class="language-selector">
-            <select onchange="switchLanguage(this.value)">
-                <option value="en">English</option>
-                <option value="pt">Português</option>
-                <option value="es">Español</option>
-                <option value="fr">Français</option>
-            </select>
-        </div>
-    </header>
+    <nav class="center-nav">
+        <a href="#home" data-en="Home" data-pt="Início" data-es="Inicio" data-fr="Accueil">Home</a>
+        <a href="#about" data-en="About" data-pt="Sobre" data-es="Acerca" data-fr="À propos">About</a>
+        <a href="#tokenomics" data-en="Tokenomics" data-pt="Tokenomia" data-es="Tokenomía" data-fr="Tokenomique">Tokenomics</a>
+        <a href="#how-to-buy" data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">How to Buy</a>
+        <a href="#contact" data-en="Contact" data-pt="Contacto" data-es="Contacto" data-fr="Contact">Contact</a>
+    </nav>
 
+    <div class="language-selector">
+        <select onchange="switchLanguage(this.value)">
+            <option value="en">English</option>
+            <option value="pt">Português</option>
+            <option value="es">Español</option>
+            <option value="fr">Français</option>
+        </select>
+    </div>
+</header>
+    
     <div class="container">
         <!-- Home Section -->
        <section id="home" class="hero">
