--- a/index.html
+++ b/index.html
@@ -84,6 +84,46 @@
             </ul>
         </section>
 
+        <!-- How to Buy Section -->
+<section id="how-to-buy">
+    <h2 data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">
+        How to Buy
+    </h2>
+    <p data-en="Buying Pawly is simple and secure. Follow these steps:"
+       data-pt="Comprar Pawly é simples e seguro. Siga estes passos:"
+       data-es="Comprar Pawly es simple y seguro. Sigue estos pasos:"
+       data-fr="Acheter Pawly est simple et sécurisé. Suivez ces étapes :">
+        Buying Pawly is simple and secure. Follow these steps:
+    </p>
+    <ol>
+        <li data-en="Step 1: Create a cryptocurrency wallet."
+            data-pt="Passo 1: Crie uma carteira de criptomoedas."
+            data-es="Paso 1: Crea una billetera de criptomonedas."
+            data-fr="Étape 1 : Créez un portefeuille de cryptomonnaie.">
+            Step 1: Create a cryptocurrency wallet.
+        </li>
+        <li data-en="Step 2: Purchase BNB or ETH on an exchange."
+            data-pt="Passo 2: Compre BNB ou ETH numa exchange."
+            data-es="Paso 2: Compra BNB o ETH en un intercambio."
+            data-fr="Étape 2 : Achetez des BNB ou ETH sur un échange.">
+            Step 2: Purchase BNB or ETH on an exchange.
+        </li>
+        <li data-en="Step 3: Swap BNB/ETH for Pawly on our platform."
+            data-pt="Passo 3: Troque BNB/ETH por Pawly na nossa plataforma."
+            data-es="Paso 3: Intercambia BNB/ETH por Pawly en nuestra plataforma."
+            data-fr="Étape 3 : Échangez BNB/ETH contre Pawly sur notre plateforme.">
+            Step 3: Swap BNB/ETH for Pawly on our platform.
+        </li>
+    </ol>
+    <p data-en="Need help? Check out our detailed guide or contact support."
+       data-pt="Precisa de ajuda? Confira o nosso guia detalhado ou entre em contato com o suporte."
+       data-es="¿Necesitas ayuda? Consulta nuestra guía detallada o contacta con soporte."
+       data-fr="Besoin d’aide ? Consultez notre guide détaillé ou contactez le support.">
+        Need help? Check out our detailed guide or contact support.
+    </p>
+</section>
+
+
         <!-- Contact Section -->
         <section id="contact">
             <h2 data-en="Contact Us" data-pt="Contacte-nos" data-es="Contáctenos" data-fr="Contactez-nous">Contact Us</h2>
