--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <body>
     
     <header>
+        
     <div class="logo-container">
-        <img src="Pawlylogo.png" alt="Logo do Pawly, uma memecoin com propósito" class="header-logo">
-        <a href="#home" class="nav-link">Pawly</a> <!-- Atualize o estilo para combinar com os botões -->
+        <a href="#home" class="logo-link">
+            <img src="Pawlylogo.png" alt="Logo do Pawly, uma memecoin com propósito" class="header-logo">
+            <span class="logo-text">Pawly</span>
+        </a>
     </div>
 
     <nav class="center-nav">
