--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         
     <div class="logo-container">
-        <a href="#home" class="logo-link">
+        <a href="" class="logo-link">
             <img src="Pawlylogo.png" alt="Logo do Pawly, uma memecoin com propósito" class="header-logo">
             <span class="logo-text">Pawly</span>
         </a>
