--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </head>
 <body>
     
-    <header id="dynamic-header">
-    <div class="logo-container">
-        <img src="Pawlylogo.png" alt="Pawly Logo" class="header-logo">
+    <header id="unique-header">
+    <div class="floating-logo">
+        <img src="Pawlylogo.png" alt="Pawly Logo">
         <span class="logo-text">Pawly</span>
     </div>
 
-    <nav class="center-nav">
+    <nav class="floating-nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#tokenomics">Tokenomics</a>
@@ -41,6 +41,7 @@
         </select>
     </div>
 </header>
+
     
     <div class="container">
         <!-- Home Section -->
