--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
 
     <nav class="floating-nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#tokenomics">Tokenomics</a>
-        <a href="#how-to-buy">How to Buy</a>
-        <a href="#contact">Contact</a>
+        <a href="#home" data-en="Home" data-pt="Início" data-es="Inicio" data-fr="Accueil">Home</a>
+        <a href="#about" data-en="About" data-pt="Sobre" data-es="Acerca" data-fr="À propos">About</a>
+        <a href="#tokenomics" data-en="Tokenomics" data-pt="Tokenomia" data-es="Tokenomía" data-fr="Tokenomique">Tokenomics</a>
+        <a href="#how-to-buy" data-en="How to Buy" data-pt="Como Comprar" data-es="Cómo Comprar" data-fr="Comment Acheter">How to Buy</a>
+        <a href="#contact" data-en="Contact" data-pt="Contacto" data-es="Contacto" data-fr="Contact">Contact</a>
     </nav>
 
     <div class="language-selector">
