--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script>
+    <!--<script>
         function switchLanguage(lang) {
             const elements = document.querySelectorAll('[data-en], [data-pt], [data-es], [data-fr]');
             elements.forEach(el => {
                 el.innerHTML = el.getAttribute(`data-${lang}`);
             });
         }
-    </script>
+    </script>-->
 </head>
 <body>
     
